# lark-monitor-pro

./: Jenkinsfile  README.md  supervisord.conf  taskfile.yml
.github/workflows/: deploy.yml
backend/: .env  .gitignore  pyproject.toml  supervisord.conf
backend/server/: app.py  scheduler.py
backend/server/exception/: __init__.py
backend/server/middleware/: __init__.py
backend/server/model/: __init__.py  bot_reply.py  duty_schedule.py  message.py  qa_tracking.py
backend/server/router/: __init__.py  bitable.py  bot_reply.py  lark_msg.py  message.py  root.py  work_order.py
backend/server/schema/: common.py  message.py
backend/server/service/: bitable.py  bot_reply.py  lark_msg.py  message.py  work_order.py
backend/server/utils/: date_helper.py  db_helper.py  lark_bitable_helper.py  lark_oapi_helper.py  sync_table_helper.py
frontend/: .env  README.md  package.json  pnpm-lock.yaml  rsbuild.config.ts
frontend/src/: env.d.ts  index.tsx  live2d.ts
frontend/src/api/: api.base.ts
frontend/src/api/endpoints/: bitable.ts  default.ts  lark-msg.ts  raw-msg.ts  root.ts  work-order.ts
frontend/src/api/model/: getAllApiRawMsgGetParams.ts  getMessageApiMessageMessageIdGetParams.ts  index.ts  (+16 more)
frontend/src/components/: layout.tsx  root.tsx  sakura-effect.tsx  use-table-scrolly.tsx
frontend/src/config/: theme.ts
frontend/src/hooks/: use-feature-toggles.ts  use-theme-primary.ts
frontend/src/pages/: duty.tsx  export.tsx  home.tsx  lark-msg.tsx  login.tsx  qa-tracking.tsx  sync.tsx  upload-bitable.tsx
frontend/src/router/: helper.ts  index.ts  routes.tsx
(+6 files in other folders)
