[project]
name = "lark-monitor-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.0",
    "lark-oapi>=1.5.5",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.45.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
